--- a/templates/sae14/portfolioccb.html.twig
+++ b/templates/sae14/portfolioccb.html.twig
@@ -55,7 +55,7 @@
                 <h2 style="font-size:1.5vw;">Chaque case correspond à un apprentissage critique réalisé durant ma première année de formation, avec ce que j'ai acquis et un document 
                 avec les tâches réalisées en classe (bouton "Download") :</h2> <br>
                 <div class="row">
-                    <div class="col-sm-12">
+                    <div class="col-sm-6">
                         <div class="aprentissages-critiques">
                             <h3 style="font-size:1.5vw;"> Déployer des supports de transmission :</h3>
                             <h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4>
@@ -65,6 +65,17 @@
                                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="aprentissages-critiques">
+                                <h3 style="font-size:1.5vw;"> Mesurer et analyser les signaux:</h3>
+                                <h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4>
+                                <h5 style="font-size:1vw"> - Réaliser des mesures Wifi aux points indiqués sur des plans <br> - Résumer les mesures indiquant les caractéristiques de chacune des paires du câble dans un tableau Excel<h5>
+                                <button class="btn"><a href=" CCB - Mesurer et analyser les signaux" download><i class="fa fa-download"></i> Download</button></a>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé
+                                </div>
                         </div>
                     </div>
                 </div>
