--- a/templates/sae14/portfolioccb.html.twig
+++ b/templates/sae14/portfolioccb.html.twig
@@ -60,7 +60,7 @@
                             <h3 style="font-size:1.5vw;"> Déployer des supports de transmission :</h3>
                             <h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4>
                             <h5 style="font-size:1vw"> - Réaliser un câblage horizontal (sur une baie à étage) <br> - Souder une fibre optique</h5>
-                            <button class="btn"><a href="CCB - Déployer des supports de transmission.docx" download><i class="fa fa-download"></i> Download</button></a>
+                            <button class="btn"><a href="CCB Deployer des supports de transmission.docx" download><i class="fa fa-download"></i> Download</button></a>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé
                                 </div>
