--- a/templates/sae14/portfolioccc.html.twig
+++ b/templates/sae14/portfolioccc.html.twig
@@ -62,7 +62,7 @@
                             - Configurer des mots de passe sur un  switch pour le sécuriser et lui affecter des ports à un VLAN spécifique (même en mode trunk)<br>
                             - Utiliser des logiciels pour programmer<br>
                             - Savoir évoluer entre l'interface graphique et le terminal</h5>
-                            <button class="btn"><a href="CCC - Utiliser un système informatique et ses outils.docx" download><i class="fa fa-download"></i> Download</button></a>
+                            <button class="btn"><a href="CCC Utiliser un systeme informatique et ses outils.docx" download><i class="fa fa-download"></i> Download</button></a>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
                             </div>
@@ -74,7 +74,7 @@
                             <u><h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4></u>
                             <h5 style="font-size:1vw"> -  Savoir lire, commenter, expliquer et analyser des erreurs dans un programme <br> 
                             - Créer un script dans le terminal</h5>
-                            <button class="btn"><a href="CCC - Lire, exécuter, corriger et modifier un programme .docx" download><i class="fa fa-download"></i> Download</button></a>
+                            <button class="btn"><a href="CCC Lire executer corriger et modifier un programme.docx" download><i class="fa fa-download"></i> Download</button></a>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
                             </div>
@@ -87,7 +87,7 @@
                             <h3 style="font-size:1.5vw;"> Traduire un algorithme, dans un langage et pour un environnement donné :</h3>
                             <u><h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4></u>
                             <h5 style="font-size:1vw"> - Savoir coder un programme avec des balises "if", "do while", des fonctions, des tableaux et des fichiers "texte"...avec de l'aide (internet, professeur, etudiant ou d'anciens programmes réalisés en cours)</h5>
-                            <button class="btn"><a href="CCC - Traduire un algorithme, dans un langage et pour un environnement donné.docx" download><i class="fa fa-download"></i> Download</button></a>
+                            <button class="btn"><a href="CCC Traduire un algorithme dans un langage et pour un environnement donne.docx" download><i class="fa fa-download"></i> Download</button></a>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
                             </div>
@@ -99,7 +99,7 @@
                             <u><h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4></u>
                             <h5 style="font-size:1vw"> - Savoir créer et afficher plusieurs pages en HTML avec des balises, des ancres et lier avec une page CSS <br>
                             - Créer une page symfony et intégrer avec des outils Bootstrap</h5>
-                            <button class="btn"><a href="CCC - Connaître l’architecture et les technologies d’un site Web.docx" download><i class="fa fa-download"></i> Download</button></a>
+                            <button class="btn"><a href="CCC Connaitre larchitecture et les technologies dun site Web.docx" download><i class="fa fa-download"></i> Download</button></a>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
                             </div>
