--- a/templates/sae14/portfoliocca.html.twig
+++ b/templates/sae14/portfoliocca.html.twig
@@ -58,7 +58,7 @@
                             <h3 style="font-size:1.5vw;"> Maîtriser les lois fondamentales de l’électricité :</h3>
                             <h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4>
                             <h5 style="font-size:1vw"> - Déterminer un pont diviseur<br>- Calculer une tension et un courant</h5>
-                            <button class="btn"><a href="CCA - Maîtriser les lois fondamentales de l’électricité.docx" download><i class="fa fa-download"></i> Download</button></a>
+                            <button class="btn"><a href="CCA Maitriser les lois fondamentales de lelectricite.docx" download><i class="fa fa-download"></i> Download</button></a>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
                             </div>
@@ -69,7 +69,7 @@
                             <h3 style="font-size:1.5vw;"> Comprendre l’architecture des systèmes numériques :</h3>
                             <h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4>
                             <h5 style="font-size:1vw"> - Lister les principales vulnérabilités pour me prévenir d'une cyberattaque</h5>
-                            <button class="btn"><a href="CCA - Comprendre l’architecture des systèmes numériques.docx" download><i class="fa fa-download"></i> Download</button></a>
+                            <button class="btn"><a href="CCA Comprendre larchitecture des systemes numeriques.docx" download><i class="fa fa-download"></i> Download</button></a>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
                             </div>
@@ -82,7 +82,7 @@
                             <h3 style="font-size:1.5vw;"> Configurer les fonctions de base du réseau local :</h3>
                             <h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4>
                             <h5 style="font-size:1vw"> - Configurer les interfaces d'un switch avec le bon VLAN ou avec un lien trunk <br> - Donner un nom au switch <br> - Bien câbler un switch</h5>
-                            <button class="btn"><a href="CCA - Configurer les fonctions de base du réseau local.docx" download><i class="fa fa-download"></i> Download</button></a>
+                            <button class="btn"><a href="CCA Configurer les fonctions de base du reseau local.docx" download><i class="fa fa-download"></i> Download</button></a>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
                             </div>
@@ -93,7 +93,7 @@
                             <h3 style="font-size:1.5vw;"> Maîtriser les rôles et les principes fondamentaux des systèmes d’exploitation :</h3>
                             <h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4>
                             <h5 style="font-size:1vw"> - Connaître les conséquences d'une cyberattaque sur le système d'exploitation et se prémunir</h5>
-                            <button class="btn"><a href="CCA - Maîtriser les rôles et les principes fondamentaux des systèmes d’exploitation.docx" download><i class="fa fa-download"></i> Download</button></a>
+                            <button class="btn"><a href="CCA Maitriser les roles et les principes fondamentaux des systemes dexploitation.docx" download><i class="fa fa-download"></i> Download</button></a>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
                             </div>
@@ -106,7 +106,7 @@
                             <h3 style="font-size:1.5vw;"> Savoir identifier les dysfonctionnements du réseau local :</h3>
                             <h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4>
                             <h5 style="font-size:1vw"> - Savoir identifier les dysfonctionnements sur un réseau et le résoudre <br> - Connaître les conséquences d'une attaque</h5>
-                            <button class="btn"><a href="CCA - Identifier les dysfonctionnements du réseau local.docx" download><i class="fa fa-download"></i> Download</button></a>
+                            <button class="btn"><a href="CCA Identifier les dysfonctionnements du reseau local.docx" download><i class="fa fa-download"></i> Download</button></a>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
                             </div>
@@ -117,7 +117,7 @@
                             <h3 style="font-size:1.5vw;"> Installer un poste client et le sécuriser :</h3>
                             <h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4>
                             <h5 style="font-size:1vw"> - Configurer des adresses IP sur un VLAN (à l'aide du logiciel Putty) <br> - Mettre en place un dossier partagé entre un hôte et un client</h5>
-                            <button class="btn"><a href="CCA - Installer un poste client.docx" download><i class="fa fa-download"></i> Download</button></a>
+                            <button class="btn"><a href="CCA Installer un poste client.docx" download><i class="fa fa-download"></i> Download</button></a>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
                             </div>
